--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -4522,7 +4522,7 @@
           "targetTable" : "ProjectTasks",
           "scale" : 0
         }, {
-          "fieldName" : "users",
+          "fieldName" : "usersByAssignedTo",
           "type" : "integer",
           "fullyQualifiedType" : "integer",
           "columnName" : "AssignedTo",
@@ -4536,6 +4536,23 @@
           "relatedTableName" : "Users",
           "relatedEntityName" : "Users",
           "relatedColumnName" : "assignedTo",
+          "targetTable" : "Users",
+          "scale" : 0
+        }, {
+          "fieldName" : "usersByCreatedBy",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "CreatedBy",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedTableName" : "Users",
+          "relatedEntityName" : "Users",
+          "relatedColumnName" : "createdBy",
           "targetTable" : "Users",
           "scale" : 0
         }, {
@@ -4628,9 +4645,22 @@
           "isRelated" : false,
           "defaultValue" : "",
           "scale" : 0
+        }, {
+          "fieldName" : "createdAt",
+          "type" : "timestamp",
+          "fullyQualifiedType" : "timestamp",
+          "columnName" : "CreatedAt",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
         } ]
       }, {
-        "fieldName" : "users",
+        "fieldName" : "usersByAssignedTo",
         "type" : "integer",
         "fullyQualifiedType" : "integer",
         "columnName" : "AssignedTo",
@@ -4644,7 +4674,249 @@
         "relatedTableName" : "Users",
         "relatedEntityName" : "Users",
         "relatedColumnName" : "assignedTo",
-        "relatedFieldName" : "users.id",
+        "relatedFieldName" : "usersByAssignedTo.id",
+        "isList" : false,
+        "targetTable" : "Users",
+        "scale" : 0,
+        "columns" : [ {
+          "fieldName" : "states",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "StateId",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "stateId",
+          "targetTable" : "States",
+          "scale" : 0
+        }, {
+          "fieldName" : "id",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ID",
+          "isPrimaryKey" : true,
+          "notNull" : true,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "identity",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "firstName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "FirstName",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "lastName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "LastName",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "email",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Email",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "address1",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Address1",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "address2",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Address2",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "city",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "City",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "postalCode",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "PostalCode",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "phoneNumber",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "PhoneNumber",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "communicationFrequency",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "CommunicationFrequency",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "active",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "Active",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "photo",
+          "type" : "blob",
+          "fullyQualifiedType" : "blob",
+          "columnName" : "Photo",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 2147483647,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "scale" : 0
+        }, {
+          "fieldName" : "banned",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "Banned",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "scale" : 0
+        }, {
+          "fieldName" : "password",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Password",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "country",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Country",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "fullName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "FullName",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 511,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "systemInserted" : true,
+          "systemUpdated" : true,
+          "scale" : 0
+        } ]
+      }, {
+        "fieldName" : "usersByCreatedBy",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "CreatedBy",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : true,
+        "defaultValue" : "",
+        "relatedTableName" : "Users",
+        "relatedEntityName" : "Users",
+        "relatedColumnName" : "createdBy",
+        "relatedFieldName" : "usersByCreatedBy.id",
         "isList" : false,
         "targetTable" : "Users",
         "scale" : 0,
@@ -4961,6 +5233,19 @@
         "isRelated" : false,
         "defaultValue" : "",
         "scale" : 0
+      }, {
+        "fieldName" : "createdAt",
+        "type" : "timestamp",
+        "fullyQualifiedType" : "timestamp",
+        "columnName" : "CreatedAt",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 0,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "",
+        "scale" : 0
       } ],
       "entityName" : "ProjectTasks",
       "fullyQualifiedName" : "com.civicxpress.cx2.ProjectTasks",
@@ -4971,7 +5256,7 @@
     "bindCount" : 0,
     "tableName" : "ProjectTasks",
     "tableType" : "TABLE",
-    "properties" : [ "projects", "projectTasksByPredecessor", "users" ],
+    "properties" : [ "projects", "projectTasksByPredecessor", "usersByAssignedTo", "usersByCreatedBy" ],
     "relatedTables" : [ {
       "columnName" : "projects",
       "relationName" : "projects",
@@ -4985,8 +5270,14 @@
       "watchOn" : "Cx2ProjectTasksData",
       "package" : "com.civicxpress.cx2.ProjectTasks"
     }, {
-      "columnName" : "users",
-      "relationName" : "users",
+      "columnName" : "usersByAssignedTo",
+      "relationName" : "usersByAssignedTo",
+      "type" : "Users",
+      "watchOn" : "Cx2UsersData",
+      "package" : "com.civicxpress.cx2.ProjectTasks"
+    }, {
+      "columnName" : "usersByCreatedBy",
+      "relationName" : "usersByCreatedBy",
       "type" : "Users",
       "watchOn" : "Cx2UsersData",
       "package" : "com.civicxpress.cx2.ProjectTasks"
