--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -506,6 +506,33 @@
         "isRelated" : false,
         "defaultValue" : "",
         "scale" : 0
+      }, {
+        "fieldName" : "fullAddress",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
+        "columnName" : "FullAddress",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : 1022,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "systemInserted" : true,
+        "systemUpdated" : true,
+        "scale" : 0
+      }, {
+        "fieldName" : "active",
+        "type" : "boolean",
+        "fullyQualifiedType" : "boolean",
+        "columnName" : "Active",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 0,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "true",
+        "scale" : 0
       } ],
       "entityName" : "Vendor",
       "fullyQualifiedName" : "com.civicxpress.cx2.Vendor",
