--- a/src/main/webapp/pages/_viewProject/_viewProject.variables.json
+++ b/src/main/webapp/pages/_viewProject/_viewProject.variables.json
@@ -1671,6 +1671,408 @@
     "filterFields" : { },
     "package" : "com.civicxpress.cx2.Projects"
   },
+  "Cx2DocumentData" : {
+    "_id" : "wm-Cx2DocumentData-wm.LiveVariable-1486501177665",
+    "name" : "Cx2DocumentData",
+    "owner" : "Page",
+    "category" : "wm.LiveVariable",
+    "dataBinding" : [ {
+      "target" : "itemGuid",
+      "value" : "bind:pageParams.ProjectGUID",
+      "type" : "string"
+    } ],
+    "operation" : "read",
+    "dataSet" : [ ],
+    "type" : "Document",
+    "isList" : true,
+    "saveInPhonegap" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "inFlightBehavior" : "executeLast",
+    "startUpdate" : false,
+    "autoUpdate" : true,
+    "transformationRequired" : false,
+    "liveSource" : "cx2",
+    "ignoreCase" : true,
+    "matchMode" : "start",
+    "orderBy" : "dateCreated desc",
+    "propertiesMap" : {
+      "columns" : [ {
+        "fieldName" : "users",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "CreatedBy",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : true,
+        "relatedTableName" : "Users",
+        "relatedEntityName" : "Users",
+        "relatedColumnName" : "createdBy",
+        "relatedFieldName" : "users.id",
+        "isList" : false,
+        "targetTable" : "Users",
+        "systemInserted" : true,
+        "systemUpdated" : true,
+        "scale" : 0,
+        "columns" : [ {
+          "fieldName" : "states",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "StateId",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "stateId",
+          "targetTable" : "States",
+          "scale" : 0
+        }, {
+          "fieldName" : "id",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ID",
+          "isPrimaryKey" : true,
+          "notNull" : true,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "identity",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "firstName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "FirstName",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "lastName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "LastName",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "email",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Email",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "address1",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Address1",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "address2",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Address2",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "city",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "City",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "postalCode",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "PostalCode",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "phoneNumber",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "PhoneNumber",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "communicationFrequency",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "CommunicationFrequency",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "active",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "Active",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "photo",
+          "type" : "blob",
+          "fullyQualifiedType" : "blob",
+          "columnName" : "Photo",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : -1,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "scale" : 0
+        }, {
+          "fieldName" : "banned",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "Banned",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "password",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Password",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "country",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Country",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "fullName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "FullName",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 511,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "systemInserted" : true,
+          "systemUpdated" : true,
+          "scale" : 0
+        }, {
+          "fieldName" : "differentBillingInfo",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "DifferentBillingInfo",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "false",
+          "scale" : 0
+        } ]
+      }, {
+        "fieldName" : "id",
+        "type" : "big_integer",
+        "fullyQualifiedType" : "big_integer",
+        "columnName" : "ID",
+        "isPrimaryKey" : true,
+        "notNull" : true,
+        "length" : 0,
+        "precision" : 18,
+        "generator" : "identity",
+        "isRelated" : false,
+        "scale" : 0
+      }, {
+        "fieldName" : "itemGuid",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
+        "columnName" : "ItemGUID",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 255,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "",
+        "scale" : 0
+      }, {
+        "fieldName" : "filename",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
+        "columnName" : "Filename",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : 255,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "scale" : 0
+      }, {
+        "fieldName" : "mimetype",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
+        "columnName" : "Mimetype",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : 255,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "scale" : 0
+      }, {
+        "fieldName" : "contents",
+        "type" : "blob",
+        "fullyQualifiedType" : "blob",
+        "columnName" : "Contents",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : -1,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "scale" : 0
+      }, {
+        "fieldName" : "dateCreated",
+        "type" : "datetime",
+        "fullyQualifiedType" : "datetime",
+        "columnName" : "DateCreated",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : 0,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "scale" : 0
+      }, {
+        "fieldName" : "violationId",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "ViolationId",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "",
+        "scale" : 0
+      }, {
+        "fieldName" : "gisRecordId",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "GisRecordId",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "scale" : 0
+      } ],
+      "entityName" : "Document",
+      "fullyQualifiedName" : "com.civicxpress.cx2.Document",
+      "tableType" : "TABLE",
+      "primaryFields" : [ "id" ]
+    },
+    "isDefault" : true,
+    "bindCount" : 1,
+    "tableName" : "Document",
+    "tableType" : "TABLE",
+    "properties" : [ "users" ],
+    "relatedTables" : [ {
+      "columnName" : "users",
+      "relationName" : "users",
+      "type" : "Users",
+      "watchOn" : "Cx2UsersData",
+      "package" : "com.civicxpress.cx2.Document"
+    } ],
+    "filterFields" : { },
+    "package" : "com.civicxpress.cx2.Document"
+  },
   "DeleteGISRecordConf" : {
     "_id" : "wm-DeleteGISRecordConf-wm.NotificationVariable-1487578544494",
     "name" : "DeleteGISRecordConf",
@@ -10781,6 +11183,30 @@
     "isList" : false,
     "saveInPhonegap" : false
   },
+  "nocAttachmentAdded" : {
+    "_id" : "wm-nocAttachmentAdded-wm.NotificationVariable-1486659696078",
+    "name" : "nocAttachmentAdded",
+    "owner" : "Page",
+    "category" : "wm.NotificationVariable",
+    "dataBinding" : [ {
+      "target" : "content",
+      "value" : "inline",
+      "type" : "string"
+    }, {
+      "target" : "text",
+      "value" : "File attached successfully",
+      "type" : "string"
+    }, {
+      "target" : "class",
+      "value" : "Success",
+      "type" : "string"
+    }, {
+      "target" : "toasterPosition",
+      "value" : "bottom right",
+      "type" : "string"
+    } ],
+    "operation" : "toast"
+  },
   "NoPersonAdded" : {
     "_id" : "wm-NoPersonAdded-wm.NotificationVariable-1487773021637",
     "name" : "NoPersonAdded",
@@ -18005,6 +18431,33 @@
     "spinnerContext" : "page",
     "spinnerMessage" : "Sending Notification"
   },
+  "svDownloadDocument" : {
+    "_id" : "wm-svDownloadDocument-wm.ServiceVariable-1486566888008",
+    "name" : "svDownloadDocument",
+    "owner" : "Page",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ {
+      "target" : "documentId",
+      "value" : "bind:Widgets.gridDocuments.selecteditem.id",
+      "type" : "integer"
+    } ],
+    "type" : "com.wavemaker.runtime.file.model.DownloadResponse",
+    "service" : "FormService",
+    "operation" : "downloadDocument",
+    "operationId" : "FormController_downloadDocument",
+    "operationType" : "get",
+    "serviceType" : "JavaService",
+    "dataSet" : [ ],
+    "isList" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "startUpdate" : false,
+    "autoUpdate" : false,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "controller" : "Form"
+  },
   "svGetMunicipalityEmployees" : {
     "_id" : "wm-svGetMunicipalityEmployees-wm.ServiceVariable-1490344522766",
     "name" : "svGetMunicipalityEmployees",
@@ -18109,6 +18562,33 @@
     "saveInPhonegap" : false,
     "controller" : "QueryExecution",
     "spinnerContext" : "page"
+  },
+  "svUploadDocument" : {
+    "_id" : "wm-svUploadDocument-wm.ServiceVariable-1486502420070",
+    "name" : "svUploadDocument",
+    "owner" : "Page",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ {
+      "target" : "inspectionGuid",
+      "value" : "bind:pageParams.ProjectGUID",
+      "type" : "string"
+    } ],
+    "service" : "InspectionService",
+    "operation" : "uploadDocuments",
+    "operationId" : "InspectionController_uploadDocuments",
+    "operationType" : "post",
+    "serviceType" : "JavaService",
+    "dataSet" : [ ],
+    "isList" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "onSuccess" : "Variables.Cx2DocumentData.listRecords();Variables.nocAttachmentAdded.invoke()",
+    "startUpdate" : false,
+    "autoUpdate" : false,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "controller" : "Inspection"
   },
   "svVendors" : {
     "_id" : "wm-svVendors-wm.ServiceVariable-1490866400300",
